--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
 
 <main>
 
-<label for="date" id="date">Enter your Birthdate</label>
+<label for="date">Enter your Birthdate</label>
 <input id="date" type="date">
 
-<label for="lucky" id="lucky">Enter your Lucky number</label>
+<label for="lucky">Enter your Lucky number</label>
 <input id="lucky" type="number">
 
 <button id="check-luck">Check</button>
+
+<div id="display"></div>
     
 </main>
     
 </body>
+<script src="app.js"></script>
 </html>
